--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.4",
-    "sass": "^1.55.0"
+    "sass": "^1.55.0",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "eslint": "8.25.0",
